<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Currency Converter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="message_network_error">Network Error</string>
    <string name="message_reload">Reload</string>
    <string name="button_conver">Convert</string>
    <string name="currency_source">Currency Source</string>
    <string name="currency_destination">To</string>
    <string name="hint">Enter your number</string>
    <string name="hint_text">Value</string>
    <string name="from">from</string>
    <string name="to">To</string>
</resources>
